--- a/ssm/pom.xml
+++ b/ssm/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>cc.aies</groupId>
-    <artifactId>aies</artifactId>
+    <artifactId>ssm</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
@@ -338,7 +338,7 @@
 
 
     <build>
-        <finalName>aies</finalName>
+        <finalName>ssm</finalName>
         <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
             <plugins>
                 <plugin>
